settings: Fix height of creating indicator overlay.
The "Creating channel..." and "Creating group..." overlay
shown when creating channels and user groups respectively
did not cover the available full height and thus did not
look good. This commit fixes the CSS so that they cover
the full height.

--- a/web/styles/subscriptions.css
+++ b/web/styles/subscriptions.css
@@ -1271,7 +1271,7 @@ h4.stream_setting_subsection_title {
                 &:not(:empty) {
                     position: absolute;
                     width: 100% !important;
-                    height: calc(100% - 105px) !important;
+                    height: 100% !important;
                     display: flex !important;
                     justify-content: center;
                     align-items: center;
